--- a/src/sass/queries/_xs-queries.scss
+++ b/src/sass/queries/_xs-queries.scss
@@ -1,17 +1,25 @@
 @import "../variables/variables";
 /*------------CELULARES-----*/
 @media screen and (max-width:767px){
-    body {        
-        div.hero-container{
-            /*-------Header-----*/
-            /*-----End--Header-----*/ 
-            /*--------Footer---------*/
-            p{
-                bottom: 0;
-                font-size: $standar-size;
-                right: -100px;
+    body{
+
+        div#nav-menu{  
+            div#nav-logo{
+
             }
-            /*------End--Footer---------*/            
+            div#nav-info{
+                font-size: 20px;
+            }
         }
-    }   
+        div#home-sec{
+            padding: 20px;
+            div#seleccionar-ruta{
+                background-color: #fff;
+                padding: 20px;
+                display: inline-block;    
+            }
+        }
+    
+       
+    }  
 } 
