--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,18 +2,17 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  outline: 1px solid purple; }
+  /*outline: 1px solid purple;*/ }
 
 body {
-  /*background-image: url(../img/img-docs/background.jpg);
-  background-size:cover;
+  background-image: url(../img/img-docs/background.jpg);
+  background-size: cover;
   background-position: top center;
-  background-repeat: no-repeat;    
-  background-attachment:scroll; 
-  height: 100vh; */
-  background-color: purple; }
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  height: 100vh;
+  /*background-color: purple;*/ }
   body div#nav-menu {
-    padding: 20px 0;
     background-color: #fff;
     border-color: #fff; }
     body div#nav-menu div#nav-info {
@@ -24,5 +23,13 @@ body {
       background-color: #fff;
       padding: 20px;
       display: inline-block; }
+      body div#home-sec div#seleccionar-ruta select {
+        border: solid 1px #FFC471; }
+    body div#home-sec p button {
+      margin-top: 10px;
+      padding: 5px 49px;
+      background: #FFC471;
+      color: #fff;
+      border-style: none; }
 
 /*# sourceMappingURL=style.css.map */
