--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -37,7 +37,6 @@ body{
         }
     }
     div#home-sec{
-        padding: 20px;
         div#seleccionar-ruta{
             background-color: #fff;
             padding: 20px;
@@ -49,15 +48,12 @@ body{
         p{
             button{
                 margin-top: 10px;
-                padding: 5px 49px;
+                padding: 5px 54px;
                 background: $segundo-color;
                 color: $blanco;
                 border-style: none;
             }    
         }
-    }
-    section#calculator *{
-        /*outline: 1px solid purple; */   
     }
     section#calculator{ 
         div#vehiculo{
@@ -89,6 +85,9 @@ body{
                 }
             }
         }           
+    }
+    #footer{
+  
     }
     
        
