--- a/src/sass/queries/_md-queries.scss
+++ b/src/sass/queries/_md-queries.scss
@@ -18,8 +18,11 @@
                 padding: 20px;
                 display: inline-block;    
             }
-        }
-    
-       
+        }    
+        #footer{
+            p{
+                
+            }            
+        }    
     } 
 }
