--- a/src/sass/queries/_xs-queries.scss
+++ b/src/sass/queries/_xs-queries.scss
@@ -19,7 +19,11 @@
                 display: inline-block;    
             }
         }
-    
-       
+        #footer{
+            
+            p{
+                    
+            }            
+        }         
     }  
 } 
