--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,7 +14,7 @@ body{
     background-attachment:scroll; 
     height: 100vh; */
     /*background-color: red;*/
-    background-color: red;
+    //background-color: red;
     div#nav-menu{  
         background-color: #fff;
         border-color: #fff;
